--- a/environment-pypy.yml
+++ b/environment-pypy.yml
@@ -6,7 +6,7 @@ channels:
 
 dependencies:
   - ipywidgets
-  - jupyterlab >=2.2.0,<3.0.0a0
+  - jupyterlab==3.3.3
   - matplotlib-base
   - nodejs
   - notebook
